infra/nfs-subdir-external-provisioner/backup/networkpolicies/egress-nfs-subdir-external-provisioner.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-nfs-subdir-external-provisioner
  namespace: nfs-subdir-external-provisioner
spec:
  selector: >-
    app == 'nfs-subdir-external-provisioner' &&
    release == 'backup'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443
