infra/nfs-subdir-external-provisioner/backup/networkpolicies/nfs-subdir-external-provisioner.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nfs-subdir-external-provisioner
  namespace: nfs-subdir-external-provisioner
spec:
  endpointSelector:
    matchLabels:
      app: nfs-subdir-external-provisioner
      release: backup
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube api
